--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap");
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .swiper-pagination-bullet-active {
   background-color: rgba(63, 120, 30, 1) !important;
 }
@@ -163,16 +167,22 @@ body {
 .hero-text-section .hero-btn {
   display: flex;
   align-items: center;
+  gap: 10px;
+  background: rgba(99, 137, 33, 1);
 
-  color: rgba(63, 120, 30, 1);
+  width: fit-content;
+  padding: 14px 23px;
   text-decoration: none;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+
+  border-radius: 8px;
+  margin-top: 24px;
 }
 
-.hero-text-section .play-btn {
-  padding-right: 10px;
+.hero-text-section .hero-btn > p {
+  color: rgba(255, 252, 232, 1);
 }
 
 .hero-text-section .hero-btn:hover {
@@ -201,15 +211,13 @@ body {
 
 /* welcome section */
 .welcome-sec {
-  padding: 50px 0;
+  padding: 5px 0;
+  width: 60%;
+  margin: 0 auto;
 }
 
-.welcome-sec .title {
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 48px;
-  color: rgba(63, 120, 30, 1);
-  margin-bottom: 20px;
+.welcome-sec .sub-row {
+  margin: 0 auto;
 }
 
 .row {
@@ -236,6 +244,10 @@ body {
 }
 
 /* value section */
+
+.values-section {
+  margin-top: 100px;
+}
 
 .values-section .img-col {
   flex-basis: 40%;
@@ -713,6 +725,7 @@ body {
 /* article section */
 .article {
   margin: 100px 0;
+  font-family: Lato;
 }
 
 .article-wrapper {
@@ -720,21 +733,24 @@ body {
   padding: 30px 20px;
   border-radius: 8px;
   height: 350px;
-  background-color: rgba(129, 178, 154, 1);
+  background-color: rgba(242, 204, 143, 1);
+
+  cursor: pointer;
+  position: relative;
 }
 
 .article-wrapper .title {
   font-weight: 500;
   font-size: 40px;
   line-height: 48px;
-  color: rgba(253, 253, 253, 1);
+  color: rgba(35, 67, 17, 1);
 }
 
 .article-wrapper .description {
   font-weight: 400;
   font-size: 18px;
   line-height: 32px;
-  color: rgba(253, 253, 253, 1);
+  color: rgba(122, 135, 107, 1);
   margin: 20px 0;
 }
 
@@ -747,12 +763,39 @@ body {
   border-radius: 8px;
   display: block;
   width: 120px;
+
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
+
+.article-wrapper:hover {
+  background: rgba(59, 58, 57, 1);
+}
+
+.article-wrapper:hover .title,
+.article-wrapper:hover .description {
+  color: rgba(255, 255, 255, 1);
+}
+
+.article-wrapper:hover .read-more-btn {
+  background-color: rgba(255, 255, 255, 1);
+  color: rgba(128, 128, 128, 1);
+}
+
+.mySwiperMobile,
+.mySwiperArticleMobile {
+  display: none;
 }
 
 /*  */
 @media (max-width: 1024px) {
   footer .container {
     padding: 0 20px;
+  }
+
+  .article-wrapper {
+    height: 420px;
   }
 }
 
@@ -780,6 +823,20 @@ body {
     line-height: 50px;
   }
 
+  .hero-text-section .hero-btn {
+  gap: 8px;
+  padding: 3px 15px;
+  text-decoration: none;
+  border-radius: 8px;
+  margin: 24px 0;
+}
+
+.hero-text-section .hero-btn > p {
+  color: rgba(255, 252, 232, 1);
+  font-size: 16px;
+  line-height: 0px;
+}
+
   .hero-text-section p {
     margin: 30px 0;
   }
@@ -797,14 +854,14 @@ body {
   }
 
   /* welcome section */
+
+  .welcome-sec {
+    width: 100%;
+  }
+
   .welcome-sec h3,
   .container > .row {
     padding: 0 20px;
-  }
-
-  .welcome-sec .title {
-    font-size: 28px;
-    line-height: 35px;
   }
 
   .sub-title {
@@ -812,8 +869,28 @@ body {
     line-height: 22px;
   }
 
+  .welcome-sec .sub-row {
+    margin: 0;
+  }
+
   .sub-row img {
     padding-right: 5px;
+  }
+
+  .mySwiper {
+    display: none;
+  }
+
+  .mySwiperMobile {
+    display: block;
+  }
+
+  .mySwiperArticle {
+    display: none;
+  }
+
+  .mySwiperArticleMobile {
+    display: block;
   }
 
   /* our values section */
@@ -848,11 +925,21 @@ body {
     line-height: 22px;
   }
 
+  /*  */
+  .did__you__know__section {
+    width: 100%;
+    padding: 0 20px;
+  }
+
   /* article section */
 
+  .hero-article-section {
+    padding: 0 20px;
+  }
+
   .article-wrapper {
-    width: 220px;
-    height: auto;
+    width: 100%;
+    height: 300px;
     padding: 10px;
   }
 
@@ -871,7 +958,7 @@ body {
     width: 100%;
   }
 
-  /* testimonail section */
+  /* testimonail section 
   .testimonial .container {
     padding: 0 20px;
   }
@@ -894,6 +981,7 @@ body {
     margin: 0;
     padding: 0;
   }
+  */
 
   /* stay in touch component */
 
@@ -963,6 +1051,12 @@ body {
     padding: 0;
     margin: 12px 0;
     font-size: 15px;
+  }
+
+  .foot-col-2,
+  .foot-col-3,
+  .foot-col-4 {
+    text-align: left;
   }
 }
 
