--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   display: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .swiper-pagination-bullet-active {
   background-color: rgba(63, 120, 30, 1) !important;
 }
@@ -939,7 +943,7 @@ body {
 
   .article-wrapper {
     width: 100%;
-    height: 300px;
+    height: 350px;
     padding: 10px;
   }
 
@@ -955,7 +959,7 @@ body {
 
   .article-wrapper .read-more-btn {
     text-align: center;
-    width: 100%;
+    width: fit-content;
   }
 
   /* testimonail section 
